# ovis

./: .clang-format  .gitignore  CMakeLists.txt  program.glsl
ColorTap/___PROJECTNAME___.xcodeproj/: project.pbxproj
ColorTap/resource/: sample.vert
ColorTap/src/: game_controller.cpp  game_controller.hpp  game_renderer.cpp  game_renderer.hpp  game_scene.cpp  game_scene.hpp  gui_renderer.cpp  gui_renderer.hpp  main.cpp
Sub/: CMakeLists.txt
Sub/___PROJECTNAME___.xcodeproj/: project.pbxproj
Sub/common/: camera_controller.cpp  camera_controller.hpp  game_scene.hpp  level_renderer.cpp  level_renderer.hpp  perlin_noise.cpp  spline.cpp  spline.hpp
Sub/editor/: CMakeLists.txt  camera_movement_controller.cpp  camera_movement_controller.hpp  editor_mode.cpp  editor_mode.hpp  editor_scene.cpp  editor_scene.hpp  path_editing_controller.cpp  path_editing_controller.hpp  path_editing_mode.cpp
Sub/game/: CMakeLists.txt  main.cpp
Sub/resource/: application.lua  cave.frag  cave.vert  default.vert  editor_layout.tb.txt  editor_tab_window.tb copy.txt  editor_tab_window.tb.txt  gui_shader.frag  gui_shader.vert  heightmap.frag  heightmap.vert  layout.txt  test.lua
Sub/src/: camera_controller.cpp  camera_controller.hpp  editor_mode.cpp  editor_scene.cpp  editor_scene.hpp  file_dialogs.cpp  file_dialogs.hpp  game_scene.cpp  game_scene.hpp  gui.cpp  gui.hpp  gui_controller.cpp  gui_controller.hpp  gui_renderer.cpp  gui_renderer.hpp  gui_scene.cpp  gui_scene.hpp  level_renderer.cpp  level_renderer.hpp  log.cpp  log.hpp  main.cpp  path_editing_controller.hpp  path_editing_mode.cpp  path_editing_mode.hpp  path_editing_renderer.cpp  path_editing_renderer.hpp  perlin_noise.hpp
Sub/turbobadger/: turbobadger.h  turbobadger.m
editor/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  application.cpp  application.hpp  class.cpp  class.hpp  down_cast.cpp  down_cast.hpp  file.cpp  file.hpp  gl.cpp  gl.hpp  graphics_buffer.cpp  graphics_buffer.hpp  graphics_device.cpp  graphics_device.hpp  graphics_resource.cpp  graphics_resource.hpp  gui.cpp  gui.hpp  gui_controller.cpp  gui_controller.hpp  gui_renderer.hpp  gui_scene.cpp  gui_scene.hpp  index_buffer.cpp  index_buffer.hpp  log.hpp  range.cpp  range.hpp  scene.cpp  scene.hpp  scene_controller.cpp  scene_controller.hpp  scene_renderer.cpp  scene_renderer.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  texture2d.cpp  (+7 more)
gui_editor/: CMakeLists.txt  editor_scene.cpp  editor_scene.hpp  main.cpp
ovis/: CMakeLists.txt
ovis/audio/: CMakeLists.txt  audio_context.hpp
ovis/core/: CMakeLists.txt  array_view.hpp  class.cpp  down_cast.cpp  down_cast.hpp  file.cpp  file.hpp  flags.hpp  log.cpp  log.hpp  profiling.cpp  profiling.hpp  range.cpp  range.hpp  resource.cpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  utf8.hpp
ovis/engine/: CMakeLists.txt  asset_library.cpp  asset_library.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  lua.cpp  lua.hpp  module.cpp  module.hpp  render_pass.cpp  render_pass.hpp  render_pipeline.cpp  render_pipeline.hpp  scene.cpp  scene.hpp  scene_component.hpp  scene_controller.cpp  scene_controller.hpp  scene_object.cpp  scene_object.hpp  scene_object_component.cpp  scene_object_component.hpp  script_scene_controller.cpp  script_scene_controller.hpp  sub_system.cpp  sub_system.hpp  viewport.cpp  viewport.hpp  window.cpp  window.hpp
ovis/engine/base/: base_module.cpp  base_module.hpp  imgui_render_pass.cpp  imgui_render_pass.hpp  imgui_scene_controller.cpp  imgui_scene_controller.hpp  transform2d_component.cpp  transform2d_component.hpp
ovis/engine/imgui/: imgui_module.cpp  imgui_module.hpp  imgui_render_pass.cpp  imgui_scene_controller.cpp  imgui_scene_controller.hpp
ovis/engine/resources/: ui.shader.json
ovis/graphics/: CMakeLists.txt  blend_state.hpp  cubemap.cpp  cubemap.hpp  depth_buffer_state.hpp  gl.cpp  gl.hpp  gpu_time_profiler.cpp  gpu_time_profiler.hpp  graphics_buffer.cpp  graphics_context.cpp  graphics_context.hpp  graphics_resource.cpp  index_buffer.cpp  index_buffer.hpp  render_target.hpp  render_target_configuration.cpp  render_target_configuration.hpp  render_target_texture2d.cpp  render_target_texture2d.hpp  shader_program.cpp  shader_program.hpp  static_mesh.hpp  texture.hpp  texture2d.cpp  texture2d.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_input.cpp  vertex_input.hpp
ovis/gui/: CMakeLists.txt  gui.cpp  gui_controller.cpp  gui_controller.hpp  gui_renderer.cpp  gui_renderer.hpp  gui_scene.cpp
ovis/math/: CMakeLists.txt  heightmap.hpp  marching_cubes.cpp  marching_cubes.hpp  rect.hpp  transform.cpp  transform.hpp  triangle.hpp
ovis/rendering/: CMakeLists.txt  geometry_pass.cpp  geometry_pass.hpp  render_pass.cpp  (+3 more)
ovis/rendering2d/: CMakeLists.txt  rendering2d_module.cpp  sprite_renderer.cpp  sprite_renderer.hpp
ovis/rendering2d/resources/: sprite.shader.json
ovis/scene/: CMakeLists.txt  camera.cpp  camera.hpp  scene.cpp  scene.hpp  scene_component.hpp  scene_controller.cpp  scene_controller.hpp  scene_object.cpp  scene_object.hpp  scene_renderer.cpp  scene_renderer.hpp  sub_system.cpp  sub_system.hpp
resource_compiler/: CMakeLists.txt  main.cpp
resources/: ocean_normals_smooth.texture2d.json  skybox.cubemap.json  skybox.shader.json  skybox.vert  water.frag  water.shader.json
resume/: CMakeLists.txt  main.cpp
rockreaper3d/: CMakeLists.txt  main.cpp  world.cpp  world.hpp  world_renderer.cpp  world_renderer.hpp
slotmachine/: CMakeLists.txt  main.cpp
slotmachine/resources/: sprite.frag  sprite.vert  vertical_blur.frag  vertical_blur.vert
slotmachine/resources/sounds/: reel.aup
slotmachine/resources/sounds/reel_data/eff/d1f/: eff1f2df.au  eff1f3ea.au
texture_converter/: CMakeLists.txt  texture_converter.cpp
water/: CMakeLists.txt  main.cpp  skybox_renderer.hpp  water_renderer.hpp
water/resources/: ocean_normals1.texture2d  ocean_normals1.texture2d.json  ocean_normals_smooth.texture2d  ocean_normals_wavy.texture2d  ocean_normals_wavy.texture2d.json  skybox.frag  water.frag  water.vert
(+31 files in other folders)
