cmake_minimum_required(VERSION 3.7)

if (${CMAKE_CXX_COMPILER} MATCHES "emscripten")
  set(OVIS_EMSCRIPTEN TRUE)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_SDL=2 -g4 -s DEMANGLE_SUPPORT=1 -s ASSERTIONS=1 -s WASM=0 -s TOTAL_MEMORY=536870912")  
else()
set(OVIS_EMSCRIPTEN FALSE)
endif()

include_directories(extern/freetype/include)
include_directories(extern/glm/include)
include_directories(extern/imgui)
add_subdirectory(extern)

add_definitions("-DSDL_ASSERT_LEVEL=3")

if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
    #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic -fno-rtti")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Wall -Wextra -Wpedantic -Werror")
elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic -fno-rtti")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
    # using Intel C++
elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MP /W4 /W4")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /W4")
    set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} /ignore:4221")
endif()

include_directories(.)
if (OVIS_EMSCRIPTEN)
  add_definitions("-DOVIS_EMSCRIPTEN=1")
endif()
add_subdirectory(ovis)
# add_subdirectory(rockreaper3d)
add_subdirectory(water)
add_subdirectory(slotmachine)

if (NOT OVIS_EMSCRIPTEN) 
  add_subdirectory(texture_converter)
endif ()